@@ -3,6 +3,7 @@
 * Added additional characters to be escaped in step strings (patch from Jake Cahoon). Closes #417.
 * Disable color codes on STDOUT when STDOUT.tty? is false (patch from Tim Pope). Closes #413.
 * mock(:null_object=>true) plays nice with HTML (patch from Gerrit Kaiser). Closes #230.
+* a step definition with no block is treated as pending
 
 == Version 1.1.4
 
